# nobincloud-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
config/: nginx.dev.conf  schema.sql
frontend/: .gitignore  .prettierrc.yml  README.md  jest.config.js  package.json  setupTests.ts
frontend/public/: index.html
frontend/src/: App.tsx  const.ts  index.tsx
frontend/src/api/: files.ts  helpers.ts  loginAccount.ts  logoutAccount.ts  registerAccount.ts
frontend/src/components/: ConfirmPopup.tsx  FoldersProvider.tsx  Header.tsx  NewFolderModal.tsx  ProfileMenu.tsx  RedirectSignedIn.tsx  RedirectSignedOut.tsx  ResponsiveIconButton.tsx  UploadMenuButton.tsx  ViewModeSelector.tsx
frontend/src/components/FileSelectCheckbox/: index.tsx  styles.sass
frontend/src/components/FolderGridView/: GridViewItem.tsx  index.tsx  styles.sass
frontend/src/components/FolderListView/: ListViewItem.tsx  index.tsx  styles.sass
frontend/src/components/MoveItemsModal/: index.tsx  styles.sass
frontend/src/components/PathViewer/: index.tsx  styles.sass
frontend/src/context/: AuthContext.ts  FolderContext.ts
frontend/src/crypto/: cipher.test.ts  cipher.ts  password.test.ts  password.ts  utils.test.ts  utils.ts
frontend/src/misc/: fileutils.ts  hooks.ts  thumbnails.ts
frontend/src/types/: API.ts  Account.ts  Files.ts
src/: main.rs
src/model/: db.rs  mod.rs  request.rs  serdebase64.rs
src/mysql/: mod.rs  queries.rs
src/server/: mod.rs
src/server/middleware/: mod.rs
src/server/routes/: file.rs  user.rs
src/services/: errors.rs  mod.rs  util.rs
(+20 files in other folders)
