[package]
name = "nobincloud-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
axum-macros = "0.4.0"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
ring = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono"] }
tokio = { version = "1.35.0", features = ["macros"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-sessions = "0.7.0"
